--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "lodash": "^4.17.2",
     "tinyreq": "^3.1.4"
   },
   "devDependencies": {},
